--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,12 @@
 name: build
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+      - 'renovate/**'
+
+  pull_request:
 
 env:
   # https://github.com/chalk/supports-color/issues/106
