--- a/renovate.json
+++ b/renovate.json
@@ -1,10 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>renovatebot/presets-internal:docker-images"],
-  "packageRules": [
-    {
-      "depTypeList": ["action"],
-      "versioning": "regex:^v(?<major>\\d+)(\\.(?<minor>\\d+)\\.(?<patch>\\d+))?$"
-    }
-  ]
+  "extends": ["github>renovatebot/presets-internal"],
 }
