--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,11 +3,11 @@ name: build
 on:
   push:
     branches:
-      - master
-      - 'renovate/**'
+      - main
+      - "renovate/**"
 
   pull_request:
-    
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,4 +29,4 @@ jobs:
         uses: renovatebot/internal-tools@v1.3.6
         with:
           command: "docker-builder"
-          dry-run: ${{github.ref != 'refs/heads/master'}}
+          dry-run: ${{github.ref != 'refs/heads/main'}}
