--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - "renovate/**"
+      - 'renovate/**'
 
   pull_request:
 
@@ -17,11 +17,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2.3.4
 
-      - name: docker-config
-        uses: renovatebot/internal-tools@v1.5.3
-        with:
-          command: docker-config
-
       - name: Docker registry login
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
@@ -29,4 +24,5 @@ jobs:
         uses: renovatebot/internal-tools@v1.5.3
         with:
           command: "docker-builder"
+          prune: true
           dry-run: ${{github.ref != 'refs/heads/main'}}
